--- a/static/list.html
+++ b/static/list.html
@@ -7,6 +7,16 @@
 		var client = new $.RestClient('/api/');
 		client.add('profile');
 		client.add('usecase');
+		client.add('info');
+
+		client.info.read(1)
+		.done(function (data, textStatus, xhrObject){
+			$('#pre').append(data.text);
+		});
+		client.info.read('usecase_post')
+		.done(function (data, textStatus, xhrObject){
+			$('#post').append(data.text);
+		});
 
 		client.usecase.read()
 		.done(function (data, textStatus, xhrObject){
@@ -20,9 +30,15 @@
 
 <body>
 	<h1>List</h1>
+
+	<h2>Pre</h2>
+	<p id="pre"></p>
 	
+	<h2>List</h2>
 	<ul id="thelist">
 	</ul>
 	
+	<h2>Post</h2>
+	<p id="post"></p>
 </body>
 </html>
